# ivy

./: .gitignore  CMakeLists.txt
cs-src/: ivy.sln
cs-src/ivyc/: Program.cs  ivyc.csproj
cs-src/ivyc/AST/: CompilationUnitNode.cs  Node.cs
cs-src/ivyc/AST/Declarations/: ClassDeclarationNode.cs  DataDeclarationNode.cs  DeclarationAnnotation.cs  DeclarationBodyNode.cs  DeclarationNode.cs  ExtensionDeclarationNode.cs  FunctionDeclarationNode.cs  ImportDeclarationNode.cs  InstanceDeclarationNode.cs  ModuleDeclarationNode.cs  SpecializationDeclarationNode.cs  StatementDeclarationNode.cs  TypeDeclarationNode.cs
cs-src/ivyc/AST/Expressions/: BinaryExpressionNode.cs  BinaryTypeExpressionNode.cs  (+15 more)
cs-src/ivyc/Basic/: ModuleName.cs  Name.cs  Number.cs  NumberOperations.cs  OperatorName.cs  SourceLocation.cs
cs-src/ivyc/Kinds/: ClassType.cs  FunctionType.cs  FunctionTypeId.cs  InstanceType.cs  Kind.cs  NamedTypeId.cs  PolyVarType.cs  ProperConstructedType.cs  ProperType.cs  TypeId.cs  TypePart.cs
cs-src/ivyc/Properties/: AssemblyInfo.cs
cs-src/ivyc/Symbols/: Symbol.cs
cs-src/ivyc/TypeSystem/: AbstractType.cs  EnumType.cs  ITypeConstructor.cs  IvyType.cs  NamedValueTypeConstructor.cs  PointerType.cs  PrimitiveType.cs  ProperType.cs  StructType.cs  TypeId.cs  UnionType.cs
cs-src/llvm-cext/: CExtensions.cpp  CExtensions.h  CMakeLists.txt
docs/: ROADMAP.txt  TYPESYSTEM.txt
include/Basic/: Assert.h  BasicTypes.h  Lambda.h  SourceLocation.h
include/Diagnostics/: DiagMessage.h
src/Basic/: SourceLocation.cpp
src/Diagnostics/: DiagMessage.cpp
src/Driver/: Main.cpp
(+44 files in other folders)
